@@ -254,6 +254,7 @@
  - (djm) [loginrec.c] Need stat.h
  - (djm) [openbsd-compat/sha2.h] Avoid include macro clash with
    system sha2.h
+ - (djm) [ssh-rand-helper.c] Needs a bunch of headers
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
@@ -4155,4 +4156,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4214 2006/03/15 03:02:01 djm Exp $
+$Id: ChangeLog,v 1.4215 2006/03/15 03:02:36 djm Exp $
